# ap2024

./: .gitignore  Haskell.gitignore
a1-handout/a1-handout/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
a1-handout/a1-handout/dist-newstyle/packagedb/ghc-9.6.6/: a1-1.0.0.0-inplace.conf  package.cache
a1-handout/a1-handout/src/APL/: AST.hs  AST_Tests.hs  Eval.hs  Eval_Tests.hs
a2-handout/a2-handout/: a2.cabal
a2-handout/a2-handout/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
a2-handout/a2-handout/dist-newstyle/packagedb/ghc-9.6.6/: a2-1.0.0.0-inplace.conf  package.cache
a2-handout/a2-handout/src/APL/: Check.hs  Check_Tests.hs  Eval.hs  Eval_Tests.hs
a2-handout/src/APL/: Check.hs  Check_Tests.hs  Eval.hs  Eval_Tests.hs
a3-handout/src/APL/: Parser.hs  Parser_Tests.hs
a4-handout/src/APL/: Eval.hs  InterpIO.hs  InterpPure.hs  Interp_Tests.hs  Monad.hs
a5-handout/src/APL/: AST.hs  Parser.hs  Tests.hs
a6-handout/src/: SPC.hs  SPC_Tests.hs
