cabal-version:      3.0
name:               a2
version:            1.0.0.0
build-type:         Simple

common common
    default-language: Haskell2010
    ghc-options: -Wall

library
    import: common
    hs-source-dirs: src
    build-depends:
        base >= 4.14 && < 5
      , tasty
      , tasty-hunit
    exposed-modules:
        APL.AST
        APL.Check
        APL.Eval
    -- Do not expose the test modules

test-suite a2-test
    import: common
    type: exitcode-stdio-1.0
    main-is: runtests.hs
    hs-source-dirs: src  -- Adjust if you have a `tests` folder for test files
    build-depends:
        base
      , tasty
      , tasty-hunit
      , a2 -- This allows the test suite to access the library modules
